trying to fix footer covering the list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,7 +102,7 @@ a.black {
   font-size: 14px;
   padding-right: 0 !important;
   padding-left: 0 !important;
-  margin-bottom: 52px;
+  margin-bottom: 55px;
 }
 
 .event-group {
@@ -162,8 +162,7 @@ header {
 }
 
 footer {
-  min-height: 52px;
-  max-height: 52px;
+  height: 54px;
   background-color: white;
   position: fixed;
   bottom: 0;
